# spackle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.spackle/: spackle.md  spackle.py
agent/: .mcp.json  instructions.md
agent/profiles/: everything.json
agent/spackle/templates/: plan.md
asset/agent/spackle/: instructions.md
asset/agent/spackle/profiles/: default.json
asset/claude/: .mcp.json  CLAUDE.md
asset/prompts/: claude.md  ensure-build-passes.md  persona.md  probe-cli.md  probe-usage-guide.md  read.md  refresh-instructions.md  refresh-probe.md  refresh-user-instructions.md  refresh-write.md  rules.md  sketch.md  spackle-main.md  spackle-rules.md  spackle-sketch.md  spackle.md  spader.md
asset/templates/: plan.md  scratch.md  spackle.py  spec.md
asset/test/: sample.xml
spackle/: __init__.py  __main__.py  jira.py  probe.py  probe.ts  profiles.py  repo.py  sqlite.py
tests/: test_jira.py  test_mcp_functions.py  test_mcp_serve.py  test_spackle_integration.py
