[project]
name = "spackle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "fastmcp>=2.10.5",
    "lxml>=6.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.setuptools]
packages = ["spackle"]

[project.scripts]
spackle = "spackle:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
indent-width = 2
include = [ "spackle/**.py", "tests/**.py" ]

[tool.ruff.format]
quote-style = "single"